[gd_scene load_steps=2 format=3 uid="uid://b8a0hl563fulo"]

[ext_resource type="Script" uid="uid://b8y78c6tfwkd" path="res://misc/hit_box/hit_box.gd" id="1_2vmrk"]

[node name="HitBox" type="Area2D"]
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("1_2vmrk")

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[node name="ImmunityTime" type="Timer" parent="."]

[connection signal="timeout" from="ImmunityTime" to="." method="_on_immunity_time_timeout"]
